--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4,7 +4,7 @@
 
 .container.my-4 {
 
-  background-color: gold;
+  background-color: grey;
 }
 
 th {
@@ -13,5 +13,5 @@ th {
 }
 
 form.mt-5 {
-  background-color: gold;
+  background-color: grey;
 }
